# treading_at_mipt

./: CMakeLists.txt  README.md  all_at_one.cpp  integrate_advansed.cpp  integrate_baseline.cpp  sort.cpp
